feat: implement Firebase authentication system with security improvements
- Add Firebase authentication to frontend with React Context and protected routes
- Implement Firebase Admin SDK integration in Spring Boot backend
- Create comprehensive authentication service with JWT token validation
- Add user registration, sign-in, and password reset functionality
- Implement email verification status display in user dashboard
- Add proper error handling and user-friendly error messages
- Create authentication middleware for API route protection
- Implement secure token verification between frontend and backend
- Add loading states and proper UX feedback during authentication
- Restructure project as proper monorepo with pnpm workspace
- Remove dependencies from root package.json and move to individual packages
- Create package.json for judge service to complete workspace setup
- Fix Tailwind CSS configuration and PostCSS setup
- Add comprehensive documentation for architecture, contributing, and deployment
- Create utility scripts directory with proper organization
- Add Docker Compose configuration for local development
- Implement proper environment variable management with placeholder templates
- Add security measures to prevent credential exposure in repository
- Create firebase-service-account.example.json template with dummy values
- Update .gitignore to exclude real credential files
- Replace all hardcoded credentials with placeholder values in documentation

This establishes a complete, secure authentication system using Firebase Auth
with proper monorepo structure, comprehensive documentation, and security best practices.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -60,14 +60,57 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- H2 Database for development (user roles) -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- Firebase Admin SDK -->
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.2.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<!-- Additional Testing Dependencies -->
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>mysql</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
