--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=CodeArena-Backend
 
-# Use H2 in-memory database for development
+# Use H2 in-memory database for development (for user roles)
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:codearena;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE}
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
@@ -8,3 +8,11 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+
+# Firebase Configuration
+# Path to your Firebase service account JSON file
+# You can place it in src/main/resources/ or specify an absolute path
+firebase.service-account-path=firebase-service-account.json
+
+# Server configuration
+server.port=8080
