feat: finalize secure Firebase authentication and registration flow
- Ensure frontend registers users in backend after Firebase Auth registration
- Remove password field from backend UserRegisterDTO and database
- Update backend to only require email, role, and displayName for registration
- Improve error handling and user feedback during registration
- Update documentation to clarify two-step registration and security best practices
- Verify and document that no passwords are stored in backend
- Ensure all environment variable and credential handling is secure and up-to-date

This completes the secure, production-ready authentication and registration system, with clear documentation and best practices enforced across the stack.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -60,11 +60,10 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- H2 Database for development (user roles) -->
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
+			<groupId>com.google.cloud.sql</groupId>
+			<artifactId>mysql-socket-factory-connector-j-8</artifactId>
+			<version>1.13.1</version>
 		</dependency>
 		<!-- Firebase Admin SDK -->
 		<dependency>
@@ -101,11 +100,6 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
