--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,18 +1,24 @@
 spring.application.name=CodeArena-Backend
 
-# Use H2 in-memory database for development (for user roles)
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:codearena;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE}
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+# Use MySQL (Cloud SQL) for all environments
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate settings
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.MySQL8Dialect}
 
 # Firebase Configuration
-# Path to your Firebase service account JSON file
-# You can place it in src/main/resources/ or specify an absolute path
 firebase.service-account-path=firebase-service-account.json
+
+# Google Cloud Storage
+gcs.bucket=${GCS_BUCKET}
+
+# Firestore
+firestore.project-id=${FIRESTORE_PROJECT_ID}
 
 # Server configuration
 server.port=8080
