docs(refactor): add comprehensive JavaDoc/JSDoc to backend and frontend codebase
- Add JavaDoc to all backend controllers, services, entities, repositories, DTOs, and exceptions for improved maintainability and onboarding
- Add JSDoc to all major frontend components, pages, context, and services to clarify usage and support collaboration
- Update backend/README.md to clarify registration expects irebaseUid, email, and displayName
- Ensure all code comments and documentation reflect current modularity, maintainability, and best practices
- No business logic or API contract changes; all updates are for maintainability, clarity, and developer experience

This commit significantly improves code quality, maintainability, and onboarding for all contributors, building on the secure authentication and registration system established previously.

--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,12 @@ temp/
 service-account-key.json
 firebase-key.json
 firebase-service-account.json
+backend/codearena-service-account.json
+
+# pnpm workspace state files
+.pnpm-workspace-state-v1.json
+.modules.yaml
+.pnpm/
 
 # Database
 *.db
