feat(auth): robust error handling and two-step registration flows
- Centralize and improve error messages for sign-in and registration (inline for user errors, toast for backend/network errors)
- Prevent duplicate popups for the same error
- Add robust two-step registration: handle partial failures, retry backend registration, and recovery flows
- Improve user feedback for all error scenarios (duplicate email, backend down, Firebase user not found, etc.)
- Clean up and document error handling in AuthContext, SignIn.jsx, Register.jsx, apiClient, and firebaseAuthService
- Remove Swagger/OpenAPI dependencies and config for now
- Add example and secure application.properties handling

BREAKING CHANGE: Error and registration flows are now robust and user-friendly

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -36,3 +36,6 @@ build/
 ### Firebase ###
 firebase-service-account.json
 *firebase*service*account*.json
+
+# Ignore application.properties with secrets
+src/main/resources/application.properties
