--- a/backend/src/main/resources/application-example.properties
+++ b/backend/src/main/resources/application-example.properties
@@ -21,6 +21,7 @@ FIREBASE_CLIENT_ID=${FIREBASE_CLIENT_ID}
 
 # Google Cloud Storage
 gcs.bucket=${GCS_BUCKET}
+google.cloud.storage.bucket-name=${GOOGLE_CLOUD_STORAGE_BUCKET_NAME:codearena-testcases}
 
 # Firestore
 firestore.project-id=${FIRESTORE_PROJECT_ID}
