--- a/backend/src/test/resources/application-test.properties
+++ b/backend/src/test/resources/application-test.properties
@@ -24,5 +24,5 @@ logging.level.com.codearena.backend=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 
-# Disable security for some tests
-spring.autoconfigure.exclude=com.google.firebase.auth.FirebaseAuth 
+# Cloud Storage Configuration for testing (mock)
+google.cloud.storage.bucket-name=test-bucket 
