feat: Fix test case bulk upload UI and backend integration
- Fix JSON parsing logic in TestCaseForm.jsx
- Update format instructions for JSON and CSV
- Add proper Cloud Storage configuration with @Value injection
- Add debugging logs for Cloud Storage operations
- Fix API response data access in TestCaseList and TestCaseEdit

Note: Cloud Storage uploads failing due to missing credentials (to be fixed)
- Test cases are created in database successfully
- UI integration working correctly
- File size calculation implemented but not persisting due to upload failures

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
       dockerfile: Dockerfile.dev
     container_name: codearena-frontend
     environment:
-      VITE_API_URL: http://localhost:8080
+      VITE_API_URL: http://localhost:8080/api
       VITE_FIREBASE_API_KEY: ${VITE_FIREBASE_API_KEY}
       VITE_FIREBASE_AUTH_DOMAIN: ${VITE_FIREBASE_AUTH_DOMAIN}
       VITE_FIREBASE_PROJECT_ID: ${VITE_FIREBASE_PROJECT_ID}
