--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -154,6 +154,13 @@
 			<version>2.40.0</version>
 		</dependency>
 		
+		<!-- Guava for Google Cloud Storage compatibility -->
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>32.1.3-jre</version>
+		</dependency>
+		
 		<!-- H2 Database for testing -->
 		<dependency>
 			<groupId>com.h2database</groupId>
