--- a/env.example
+++ b/env.example
@@ -9,7 +9,7 @@ FIREBASE_CLIENT_EMAIL=your-service-account@your-project.iam.gserviceaccount.com
 FIREBASE_CLIENT_ID=your-client-id
 
 # Frontend Environment Variables (Vite)
-VITE_API_URL=http://localhost:8080
+VITE_API_URL=http://localhost:8080/api
 VITE_FIREBASE_API_KEY=your-firebase-api-key
 VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=your-firebase-project-id
